feat: melhorias pontuais